bloodc/src/parser/snapshots/bloodc__parser__tests__if_let_ref_pattern.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: IfLet {
                                    pattern: Pattern {
                                        kind: Ref {
                                            mutable: false,
                                            inner: Pattern {
                                                kind: TupleStruct {
                                                    path: TypePath {
                                                        segments: [
                                                            TypePathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 2,
                                                                    },
                                                                    span: Span {
                                                                        start: 17,
                                                                        end: 21,
                                                                        start_line: 1,
                                                                        start_col: 18,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 17,
                                                            end: 21,
                                                            start_line: 1,
                                                            start_col: 18,
                                                        },
                                                    },
                                                    fields: [
                                                        Pattern {
                                                            kind: Ident {
                                                                by_ref: true,
                                                                mutable: false,
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 3,
                                                                    },
                                                                    span: Span {
                                                                        start: 26,
                                                                        end: 27,
                                                                        start_line: 1,
                                                                        start_col: 27,
                                                                    },
                                                                },
                                                                subpattern: None,
                                                            },
                                                            span: Span {
                                                                start: 22,
                                                                end: 27,
                                                                start_line: 1,
                                                                start_col: 23,
                                                            },
                                                        },
                                                    ],
                                                    rest_pos: None,
                                                },
                                                span: Span {
                                                    start: 17,
                                                    end: 28,
                                                    start_line: 1,
                                                    start_col: 18,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 16,
                                            end: 28,
                                            start_line: 1,
                                            start_col: 17,
                                        },
                                    },
                                    scrutinee: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 4,
                                                            },
                                                            span: Span {
                                                                start: 31,
                                                                end: 34,
                                                                start_line: 1,
                                                                start_col: 32,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 31,
                                                    end: 34,
                                                    start_line: 1,
                                                    start_col: 32,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 31,
                                            end: 34,
                                            start_line: 1,
                                            start_col: 32,
                                        },
                                    },
                                    then_branch: Block {
                                        statements: [],
                                        expr: Some(
                                            Expr {
                                                kind: Unary {
                                                    op: Deref,
                                                    operand: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 3,
                                                                            },
                                                                            span: Span {
                                                                                start: 38,
                                                                                end: 39,
                                                                                start_line: 1,
                                                                                start_col: 39,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 38,
                                                                    end: 39,
                                                                    start_line: 1,
                                                                    start_col: 39,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 38,
                                                            end: 39,
                                                            start_line: 1,
                                                            start_col: 39,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    start: 37,
                                                    end: 39,
                                                    start_line: 1,
                                                    start_col: 38,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 35,
                                            end: 41,
                                            start_line: 1,
                                            start_col: 36,
                                        },
                                    },
                                    else_branch: Some(
                                        Block(
                                            Block {
                                                statements: [],
                                                expr: Some(
                                                    Expr {
                                                        kind: Literal(
                                                            Literal {
                                                                kind: Int {
                                                                    value: 0,
                                                                    suffix: None,
                                                                },
                                                                span: Span {
                                                                    start: 49,
                                                                    end: 50,
                                                                    start_line: 1,
                                                                    start_col: 50,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 49,
                                                            end: 50,
                                                            start_line: 1,
                                                            start_col: 50,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 47,
                                                    end: 52,
                                                    start_line: 1,
                                                    start_col: 48,
                                                },
                                            },
                                        ),
                                    ),
                                },
                                span: Span {
                                    start: 9,
                                    end: 52,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 54,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 54,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 54,
        start_line: 1,
        start_col: 1,
    },
}
