bloodc/src/parser/snapshots/bloodc__parser__tests__import_item.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [
        Simple {
            visibility: Private,
            path: ModulePath {
                segments: [
                    Spanned {
                        node: SymbolU32 {
                            value: 1,
                        },
                        span: Span {
                            start: 4,
                            end: 7,
                            start_line: 1,
                            start_col: 5,
                        },
                    },
                    Spanned {
                        node: SymbolU32 {
                            value: 2,
                        },
                        span: Span {
                            start: 8,
                            end: 10,
                            start_line: 1,
                            start_col: 9,
                        },
                    },
                    Spanned {
                        node: SymbolU32 {
                            value: 3,
                        },
                        span: Span {
                            start: 12,
                            end: 19,
                            start_line: 1,
                            start_col: 13,
                        },
                    },
                ],
                span: Span {
                    start: 4,
                    end: 19,
                    start_line: 1,
                    start_col: 5,
                },
            },
            alias: None,
            span: Span {
                start: 0,
                end: 20,
                start_line: 1,
                start_col: 1,
            },
        },
    ],
    declarations: [],
    span: Span {
        start: 0,
        end: 20,
        start_line: 1,
        start_col: 1,
    },
}
