bloodc/src/parser/snapshots/bloodc__parser__tests__labeled_loop.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Loop {
                                    label: Some(
                                        Spanned {
                                            node: SymbolU32 {
                                                value: 2,
                                            },
                                            span: Span {
                                                start: 9,
                                                end: 15,
                                                start_line: 1,
                                                start_col: 10,
                                            },
                                        },
                                    ),
                                    body: Block {
                                        statements: [],
                                        expr: Some(
                                            Expr {
                                                kind: Break {
                                                    label: Some(
                                                        Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 30,
                                                                end: 36,
                                                                start_line: 1,
                                                                start_col: 31,
                                                            },
                                                        },
                                                    ),
                                                    value: None,
                                                },
                                                span: Span {
                                                    start: 24,
                                                    end: 36,
                                                    start_line: 1,
                                                    start_col: 25,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 22,
                                            end: 38,
                                            start_line: 1,
                                            start_col: 23,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 17,
                                    end: 38,
                                    start_line: 1,
                                    start_col: 18,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 40,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 40,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 40,
        start_line: 1,
        start_col: 1,
    },
}
